--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <phpunit bootstrap="vendor/autoload.php"
          backupGlobals="false"
          backupStaticAttributes="false"
@@ -5,6 +6,9 @@
          convertNoticesToExceptions="true"
          convertWarningsToExceptions="true"
          colors="true"
+         verbose="true"
+         processIsolation="false"
+         stopOnFailure="false"
 >
     <testsuites>
         <testsuite name="Netgen\RemoteMedia\Tests">
@@ -23,4 +27,10 @@
             </exclude>
         </whitelist>
     </filter>
+    <logging>
+        <log type="junit" target="build/report.junit.xml"/>
+        <log type="coverage-html" target="build/coverage" charset="UTF-8" yui="true" highlight="true"/>
+        <log type="coverage-text" target="build/coverage.txt"/>
+        <log type="coverage-clover" target="build/logs/clover.xml"/>
+    </logging>
 </phpunit>
