--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "require": {
         "ezsystems/ezpublish-kernel": "*",
         "doctrine/orm": "~2.4",
-        "cloudinary/cloudinary_php": "~1.2.0"
+        "cloudinary/cloudinary_php": "^1.0"
     },
     "require-dev": {
         "matthiasnoback/symfony-config-test": "~2.0",
