Exclude SearchField class from tests

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -27,6 +27,7 @@
                 <directory>vendor</directory>
                 <directory>update</directory>
                 <directory>extension</directory>
+                <file>Core/FieldType/RemoteMedia/SearchField.php</file>
                 <file>RemoteMedia/Provider/Cloudinary/Gateway/CachedGateway.php</file>
                 <file>NetgenRemoteMediaBundle.php</file>
             </exclude>
