--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ matrix:
 branches:
   only:
     - master
+    - dev
 
 # make sure to update composer to latest available version
 before_install:
