--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,12 @@
         }
     ],
     "require": {
-        "ezsystems/ezpublish-kernel": "*",
+        "php": "~5.6|~7.0|~7.1",
+        "ezsystems/ezpublish-kernel": "^6.0|^5.4|>=2014.11.0",
         "doctrine/orm": "~2.4",
         "cloudinary/cloudinary_php": "^1.0"
     },
     "require-dev": {
-        "netgen/open-graph-bundle": "^1.0",
         "netgen/admin-ui-bundle": "^2.0",
         "matthiasnoback/symfony-config-test": "~2.0",
         "matthiasnoback/symfony-dependency-injection-test": "~1.0",
