--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "cloudinary/cloudinary_php": "^1.0"
     },
     "require-dev": {
+        "ezsystems/ezpublish-kernel": ">=2014.11.0",
         "netgen/open-graph-bundle": "^1.0",
         "netgen/admin-ui-bundle": "^2.0",
         "matthiasnoback/symfony-config-test": "~2.0",
