--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,5 +1,5 @@
 parameters:
-    netgen_remote_media.cloudinary.delete_not_used: true
+    netgen_remote_media.cloudinary.delete_not_used: false
 
 services:
     netgen_remote_media.handler_registry:
