Make admin preview variations configurable

--- a/Resources/config/default_settings.yml
+++ b/Resources/config/default_settings.yml
@@ -1,6 +1,10 @@
 system:
     default:
         image_variations:
+            default:
+                admin_preview:
+                    transformations:
+                        - { name: limit, params: [600,600] }
             embedded:
                 small:
                     transformations:
