Add composer cache to travis cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ language: php
 cache:
     directories:
         - vendor
+        - $HOME/.composer/cache/files
 
 matrix:
     # mark as finished before allow_failures are run
