--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,13 @@
         }
     ],
     "require": {
-        "php": "~5.6|~7.0|~7.1",
-        "ezsystems/ezpublish-kernel": "^6.0|^5.4|>=2014.11.0",
+        "php": "~5.6|~7.0",
+        "ezsystems/ezpublish-kernel": "*",
         "doctrine/orm": "~2.4",
         "cloudinary/cloudinary_php": "^1.0"
     },
     "require-dev": {
-        "ezsystems/ezpublish-kernel": ">=2014.11.0",
+        "ezsystems/ezpublish-kernel": "~2014.11.0",
         "netgen/open-graph-bundle": "^1.0",
         "netgen/admin-ui-bundle": "^2.0",
         "matthiasnoback/symfony-config-test": "~2.0",
