Update license identifier

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "remote-media-bundle"
     ],
     "homepage": "https://github.com/netgen/NetgenRemoteMediaBundle",
-    "license": "GPL-2.0",
+    "license": "GPL-2.0-only",
     "authors": [
         {
             "name": "Netgen",
