--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -2,6 +2,10 @@ parameters:
     #netgen_remote_media.default.cloudinary.folder_name: ''
     netgen_remote_media.cloudinary.delete_not_used: true
 
+    netgen_remote_media.cloudinary.no_extension_mime_types:
+        - image
+        - video
+
 services:
     netgen_remote_media.handler_registry:
         class: Netgen\Bundle\RemoteMediaBundle\RemoteMedia\Transformation\Registry
@@ -24,6 +28,7 @@ services:
             - "@netgen_remote_media.variation.resolver"
             - "@netgen_remote_media.provider.cloudinary.gateway"
             - "@?logger"
+            - "%netgen_remote_media.cloudinary.no_extension_mime_types%"
 
     netgen_remote_media.helper:
         class: Netgen\Bundle\RemoteMediaBundle\RemoteMedia\Helper
