--- a/Resources/config/default_parameters.yml
+++ b/Resources/config/default_parameters.yml
@@ -1,3 +1,4 @@
 parameters:
     netgen_remote_media.parameters.use_subdomains: true
     netgen_remote_media.cloudinary.internal_limit: 500
+    netgen_remote_media.cloudinary.cache_ttl: 7200
