--- a/composer.json
+++ b/composer.json
@@ -20,18 +20,17 @@
     ],
     "require": {
         "php": "~5.6|~7.0",
-        "ezsystems/ezpublish-kernel": "*",
-        "doctrine/orm": "~2.4",
+        "ezsystems/ezpublish-kernel": "^6.0|^5.4|>=2014.11.0",
+        "doctrine/orm": "^2.4",
         "cloudinary/cloudinary_php": "^1.0"
     },
     "require-dev": {
-        "ezsystems/ezpublish-kernel": "2014.11.8",
         "netgen/open-graph-bundle": "^1.0",
         "netgen/admin-ui-bundle": "^2.0",
-        "matthiasnoback/symfony-config-test": "~2.0",
-        "matthiasnoback/symfony-dependency-injection-test": "~1.0",
+        "matthiasnoback/symfony-config-test": "^2.0",
+        "matthiasnoback/symfony-dependency-injection-test": "^1.0",
         "phpunit/phpunit": "^5.7",
-        "friendsofphp/php-cs-fixer": "~2.0"
+        "friendsofphp/php-cs-fixer": "^2.0"
     },
     "target-dir": "Netgen/Bundle/RemoteMediaBundle",
     "autoload": {
