--- a/bundle/Resources/config/services.yml
+++ b/bundle/Resources/config/services.yml
@@ -45,3 +45,13 @@ services:
             - "@netgen_remote_media.provider.cloudinary"
         tags:
             -  { name: netgen_content_browser.backend, item_type: cloudinary }
+
+    # eZ Admin v2 support
+    netgen_remote_media.ezadminui.component.javascripts:
+        parent: EzSystems\EzPlatformAdminUi\Component\TwigComponent
+        public: false
+        arguments:
+            - "@twig"
+            - "@@NetgenRemoteMedia/ezadminui/javascripts.html.twig"
+        tags:
+            - { name: ezplatform.admin_ui.component, group: 'script-body' }
