Include ezadmin javascripts

--- a/bundle/Resources/config/services.yml
+++ b/bundle/Resources/config/services.yml
@@ -38,3 +38,20 @@ services:
         class: Netgen\Bundle\RemoteMediaBundle\MenuPlugin\RemoteMediaMenuPlugin
         tags:
             - { name: "netgen_admin_ui.menu_plugin" }
+
+    netgen_remote_media.content_browser.backend.cloudinary:
+        class: Netgen\Bundle\RemoteMediaBundle\RemoteMedia\Provider\Cloudinary\ContentBrowser\Backend\CloudinaryBackend
+        arguments:
+            - "@netgen_remote_media.provider.cloudinary"
+        tags:
+            -  { name: netgen_content_browser.backend, item_type: cloudinary }
+
+    # eZ Admin v2 support
+    netgen_remote_media.ezadminui.component.javascripts:
+        parent: EzSystems\EzPlatformAdminUi\Component\TwigComponent
+        public: false
+        arguments:
+            - "@twig"
+            - "@@NetgenRemoteMedia/ezadminui/javascripts.html.twig"
+        tags:
+            - { name: ezplatform.admin_ui.component, group: 'script-body' }
