--- a/bundle/Resources/config/ezadminui/twig.yml
+++ b/bundle/Resources/config/ezadminui/twig.yml
@@ -1,3 +1,2 @@
 form_themes:
-    # @todo: why this doesn't work: - '@NetgenRemoteMediaBundle/ezadminui/field/edit/ngremotemedia.html.twig' ???
-    - 'NetgenRemoteMediaBundle:ezadminui/field/edit:ngremotemedia.html.twig'
+    - '@NetgenRemoteMedia/ezadminui/field/edit/ngremotemedia.html.twig'
