--- a/bundle/Resources/config/fieldtypes.yml
+++ b/bundle/Resources/config/fieldtypes.yml
@@ -41,6 +41,7 @@ services:
         public: false
         arguments:
             - "@ezpublish.api.service.field_type"
+            - "@netgen_remote_media.provider"
         tags:
             - { name: form.type }
 
