--- a/bundle/Resources/config/services.yml
+++ b/bundle/Resources/config/services.yml
@@ -1,3 +1,6 @@
+imports:
+    - { resource: 'ezadminui/controllers.yml' }
+
 parameters:
     netgen_remote_media.remove_unused_resources: false
     netgen_remote_media.ezoe.class_list:
@@ -55,3 +58,12 @@ services:
             - "@@NetgenRemoteMedia/ezadminui/javascripts.html.twig"
         tags:
             - { name: ezplatform.admin_ui.component, group: 'script-body' }
+
+    netgen_remote_media.ezadminui.component.stylesheets:
+        parent: EzSystems\EzPlatformAdminUi\Component\TwigComponent
+        public: false
+        arguments:
+            - "@twig"
+            - "@@NetgenRemoteMedia/ezadminui/stylesheets.html.twig"
+        tags:
+            - { name: ezplatform.admin_ui.component, group: 'stylesheet-head' }
