--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,21 @@ npm-debug.log
 node_modules
 *.css.map
 build
+.DS_Store
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
