--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "cropperjs": "^1.5.5",
     "debounce": "^1.2.0",
     "vue": "^2.6.10",
     "vue-select": "^3.2.0"
