--- a/bundle/Resources/config/fieldtypes.yml
+++ b/bundle/Resources/config/fieldtypes.yml
@@ -37,8 +37,14 @@ services:
         arguments:
             - "@ezpublish.api.service.field_type"
             - "@netgen_remote_media.provider"
+            - "@netgen_remote_media.admin.field_update.helper"
         tags:
             - { name: form.type }
+
+    netgen_remote_media.admin.field_update.helper:
+        class: Netgen\Bundle\RemoteMediaBundle\Core\FieldType\RemoteMedia\UpdateFieldHelper
+        arguments:
+            - "@netgen_remote_media.provider"
 
     ezpublish.fieldtype.ngremotemedia.form_mapper:
         class: Netgen\Bundle\RemoteMediaBundle\Core\FieldType\RemoteMedia\FormMapper
