NGSTACK-342 pass paths and available variations to js through config object

--- a/bundle/Resources/config/ezadminui/routing.yml
+++ b/bundle/Resources/config/ezadminui/routing.yml
@@ -1,9 +1,9 @@
-folders:
+netgen_remote_media_ezadmin_folders:
     path: /folders
     defaults:
         _controller: netgen_remote_media.controllers.ezadminui.folders.list
 
-browse:
+netgen_remote_media_ezadmin_browse:
     path: /browse
     defaults:
         _controller: netgen_remote_media.controllers.ezadminui.browse
