--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
         "matthiasnoback/symfony-dependency-injection-test": "^3.0",
         "mikey179/vfsstream": "^1.0",
         "phpunit/phpunit": "^7.0",
-        "friendsofphp/php-cs-fixer": "^2.0"
+        "friendsofphp/php-cs-fixer": "^2.0",
+        "rector/rector": "^0.5.22"
     },
     "autoload": {
         "psr-4": {
