NGSTACK-342 Add dev build npm command

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build && node copyFiles.js",
+    "dev": "vue-cli-service build --mode development && node copyFilesDev.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
