--- a/bundle/Resources/config/fieldtypes.yml
+++ b/bundle/Resources/config/fieldtypes.yml
@@ -48,6 +48,7 @@ services:
 
     ezpublish.fieldtype.ngremotemedia.form_mapper:
         class: Netgen\Bundle\RemoteMediaBundle\Core\FieldType\RemoteMedia\FormMapper
+        arguments:
+            - '@ezpublish.api.service.field_type'
         tags:
             - {name: ez.fieldFormMapper.value, fieldType: ngremotemedia}
-        arguments: ['@ezpublish.api.service.field_type']
