NGSTACK-502 Refactor folders controllers to be used for fetching all facets

--- a/bundle/Resources/config/ezadminui/controllers.yml
+++ b/bundle/Resources/config/ezadminui/controllers.yml
@@ -1,6 +1,6 @@
 services:
-    netgen_remote_media.controllers.ezadminui.folders.list:
-        class: Netgen\Bundle\RemoteMediaBundle\Controller\EzAdminUI\Folders\ListController
+    netgen_remote_media.controllers.ezadminui.facets.list:
+        class: Netgen\Bundle\RemoteMediaBundle\Controller\EzAdminUI\Facets\ListController
         arguments:
             - '@netgen_remote_media.provider'
 
