--- a/bundle/Resources/config/services.yml
+++ b/bundle/Resources/config/services.yml
@@ -68,3 +68,13 @@ services:
             - "@netgen_remote_media.provider"
         tags:
             - { name: console.command }
+
+    netgen_remote_media.ezxml.pre_converter:
+        class: Netgen\Bundle\RemoteMediaBundle\Converter\XmlText\NgRemoteMediaPreConverter
+        arguments:
+            - "@netgen_remote_media.provider"
+            - "@request_stack"
+            - "@ezpublish.api.service.content"
+            - "@ezpublish.api.service.content_type"
+        tags:
+            - { name: ezpublish.ezxml.converter }
