--- a/bundle/Resources/config/ezadminui/controllers.yml
+++ b/bundle/Resources/config/ezadminui/controllers.yml
@@ -4,6 +4,11 @@ services:
         arguments:
             - '@netgen_remote_media.provider'
 
+    netgen_remote_media.controllers.ezadminui.sub_folders.list:
+      class: Netgen\Bundle\RemoteMediaBundle\Controller\EzAdminUI\SubFolders\ListController
+      arguments:
+        - '@netgen_remote_media.provider'
+
     netgen_remote_media.controllers.ezadminui.browse:
         class: Netgen\Bundle\RemoteMediaBundle\Controller\EzAdminUI\BrowseController
         arguments:
