--- a/bundle/Resources/config/ezadminui/routing.yml
+++ b/bundle/Resources/config/ezadminui/routing.yml
@@ -3,6 +3,11 @@ netgen_remote_media_ezadmin_facets:
     defaults:
         _controller: netgen_remote_media.controllers.ezadminui.facets.list
 
+netgen_remote_media_ezadmin_sub_folders:
+  path: /subfolders
+  defaults:
+    _controller: netgen_remote_media.controllers.ezadminui.sub_folders.list
+
 netgen_remote_media_ezadmin_browse:
     path: /browse
     defaults:
