--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@riophae/vue-treeselect": "^0.4.0",
+    "axios": "^0.21.1",
     "core-js": "^2.6.5",
     "cropperjs": "^1.5.5",
     "debounce": "^1.2.0",
