--- a/bundle/Resources/config/ezadminui/controllers.yml
+++ b/bundle/Resources/config/ezadminui/controllers.yml
@@ -1,13 +1,13 @@
 services:
-    netgen_remote_media.controllers.ezadminui.facets.list:
-        class: Netgen\Bundle\RemoteMediaBundle\Controller\EzAdminUI\Facets\ListController
+    netgen_remote_media.controllers.ezadminui.facets.load:
+        class: Netgen\Bundle\RemoteMediaBundle\Controller\EzAdminUI\Facets\Load
         arguments:
             - '@netgen_remote_media.provider'
 
-    netgen_remote_media.controllers.ezadminui.sub_folders.list:
-      class: Netgen\Bundle\RemoteMediaBundle\Controller\EzAdminUI\SubFolders\ListController
-      arguments:
-        - '@netgen_remote_media.provider'
+    netgen_remote_media.controllers.ezadminui.folder.load:
+        class: Netgen\Bundle\RemoteMediaBundle\Controller\EzAdminUI\Folder\Load
+        arguments:
+            - '@netgen_remote_media.provider'
 
     netgen_remote_media.controllers.ezadminui.browse:
         class: Netgen\Bundle\RemoteMediaBundle\Controller\EzAdminUI\BrowseController
