--- a/bundle/Resources/config/ezadminui/routing.yml
+++ b/bundle/Resources/config/ezadminui/routing.yml
@@ -1,12 +1,12 @@
-netgen_remote_media_ezadmin_facets:
-    path: /facets
+netgen_remote_media_ezadmin_facets_load:
+    path: /facets/load
     defaults:
-        _controller: netgen_remote_media.controllers.ezadminui.facets.list
+        _controller: netgen_remote_media.controllers.ezadminui.facets.load
 
-netgen_remote_media_ezadmin_sub_folders:
-  path: /subfolders
+netgen_remote_media_ezadmin_folder_load:
+  path: /folder/load
   defaults:
-    _controller: netgen_remote_media.controllers.ezadminui.sub_folders.list
+    _controller: netgen_remote_media.controllers.ezadminui.folder.load
 
 netgen_remote_media_ezadmin_browse:
     path: /browse
