--- a/bundle/Resources/config/ezadminui/controllers.yml
+++ b/bundle/Resources/config/ezadminui/controllers.yml
@@ -20,6 +20,12 @@ services:
             - '@netgen_remote_media.provider'
             - '@netgen_remote_media.helper'
 
+    netgen_remote_media.controllers.ezadminui.editor.fetch:
+        class: Netgen\Bundle\RemoteMediaBundle\Controller\EzAdminUI\Editor\FetchController
+        arguments:
+            - '@netgen_remote_media.provider'
+            - '@netgen_remote_media.helper'
+
     netgen_remote_media.controllers.ezadminui.editor.insert:
         class: Netgen\Bundle\RemoteMediaBundle\Controller\EzAdminUI\Editor\InsertController
         arguments:
