--- a/bundle/Resources/config/services.yml
+++ b/bundle/Resources/config/services.yml
@@ -69,6 +69,13 @@ services:
         tags:
             - { name: console.command }
 
+    netgen_remote_media.command.api_usage:
+        class: Netgen\Bundle\RemoteMediaBundle\Command\ShowApiUsageCommand
+        arguments:
+            - "@netgen_remote_media.provider"
+        tags:
+            - { name: console.command }
+
     netgen_remote_media.ezxml.pre_converter:
         class: Netgen\Bundle\RemoteMediaBundle\Converter\XmlText\NgRemoteMediaPreConverter
         arguments:
