--- a/bundle/Resources/config/services.yml
+++ b/bundle/Resources/config/services.yml
@@ -66,6 +66,7 @@ services:
         arguments:
             - "@doctrine.orm.entity_manager"
             - "@netgen_remote_media.provider"
+            - "@netgen_remote_media.variation.resolver"
         tags:
             - { name: console.command }
 
