--- a/bundle/Resources/config/ezadminui/ezrichtext.yml
+++ b/bundle/Resources/config/ezadminui/ezrichtext.yml
@@ -2,3 +2,4 @@ alloy_editor:
     extra_plugins: [ngremotemedia]
     extra_buttons:
         paragraph: [ngremotemedia]
+        ngremotemedia: [ngremotemedia]
