--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "require": {
         "php": "^7.4",
         "doctrine/orm": "^2.4",
-        "cloudinary/cloudinary_php": "^1.0"
+        "cloudinary/cloudinary_php": "^1.0",
+        "symfony/cache": "^5.3"
     },
     "require-dev": {
         "matthiasnoback/symfony-dependency-injection-test": "^3.0",
