--- a/bundle/Resources/config/default_parameters.yml
+++ b/bundle/Resources/config/default_parameters.yml
@@ -2,4 +2,5 @@ parameters:
     netgen_remote_media.parameters.use_subdomains: true
     netgen_remote_media.cloudinary.internal_limit: 500
     netgen_remote_media.cloudinary.cache_ttl: 7200
+    netgen_remote_media.remove_unused_resources: false
     netgen_remote_media.default.parameters.audio.enable_waveform: false
