--- a/bundle/Resources/config/services/cache.yml
+++ b/bundle/Resources/config/services/cache.yml
@@ -1,6 +1,6 @@
 services:
     netgen_remote_media.provider.cloudinary.gateway.cached:
-        class: Netgen\Bundle\RemoteMediaBundle\RemoteMedia\Provider\Cloudinary\Gateway\Cache\Psr6CachedGateway
+        class: Netgen\RemoteMedia\Core\Provider\Cloudinary\Gateway\Cache\Psr6CachedGateway
         arguments:
             - "@netgen_remote_media.provider.cloudinary.gateway"
             - "@ezpublish.cache_pool"
