NGSTACK-525 Clean-up dependencies

--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,8 @@
     "require": {
         "php": "^7.4",
         "cloudinary/cloudinary_php": "^1.0",
-        "symfony/cache": "^5.3",
-        "symfony/http-foundation": "^5.3",
-        "symfony/mime": "^5.3",
-        "symfony/framework-bundle": "^5.3"
+        "symfony/mime": "^3.4.47 || ^4.4 || ^5.3",
+        "symfony/framework-bundle": "^3.4.47 || ^4.4 || ^5.3"
     },
     "require-dev": {
         "matthiasnoback/symfony-dependency-injection-test": "^4.0",
