NGSTACK-525 Fix issues with cache

--- a/bundle/Resources/config/cache.yaml
+++ b/bundle/Resources/config/cache.yaml
@@ -2,4 +2,4 @@ cache:
     default_memcached_provider: 'memcached://localhost'
     pools:
         ngrm.cache:
-            adapter: cache.adapter.redis
+            adapter: cache.adapter.redis_tag_aware
