NGSTACK-525 Require Twig bundle which is needed

--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "php": "^7.4",
         "cloudinary/cloudinary_php": "^1.0",
         "symfony/mime": "^3.4.47 || ^4.4 || ^5.2",
+        "symfony/twig-bundle": "^3.4.47 || ^4.4 || ^5.2",
         "symfony/framework-bundle": "^3.4.47 || ^4.4 || ^5.2"
     },
     "require-dev": {
