NGSTACK-525 Refactor caching service

--- a/bundle/Resources/config/default_settings.yaml
+++ b/bundle/Resources/config/default_settings.yaml
@@ -12,3 +12,6 @@ image_variations:
             transformations:
                 - { name: crop, params: [1600, 900] }
                 - { name: resize, params: [1600, 900] }
+cache:
+    adapter: cache.adapter.filesystem
+    provider: ~
