NGSTACK-525 Remove cache pool configuration from bundle

--- a/bundle/Resources/config/default_settings.yaml
+++ b/bundle/Resources/config/default_settings.yaml
@@ -13,5 +13,5 @@ image_variations:
                 - { name: crop, params: [1600, 900] }
                 - { name: resize, params: [1600, 900] }
 cache:
-    adapter: cache.adapter.filesystem
-    provider: ~
+    pool: cache.app
+    ttl: 7200
