Downgrade to CS fixer 2.19 to support Symfony 3.4

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ composer.phar
 composer.lock
 phpunit.phar
 .php-version
-.php-cs-fixer.cache
+.php_cs.cache
 .phpunit.result.cache
 **/.sass-cache
 npm-debug.log
