--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "matthiasnoback/symfony-dependency-injection-test": "^4.0",
         "mikey179/vfsstream": "^1.0",
         "phpunit/phpunit": "^9.0",
-        "friendsofphp/php-cs-fixer": "^2.19",
+        "friendsofphp/php-cs-fixer": "^2.19 || ^3.0",
         "rector/rector": "^0.11.53"
     },
     "autoload": {
