--- a/composer.json
+++ b/composer.json
@@ -28,15 +28,15 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "cloudinary/cloudinary_php": "^1.0",
-        "symfony/mime": "^3.4.47 || ^4.4 || ^5.2",
-        "symfony/twig-bundle": "^3.4.47 || ^4.4 || ^5.2",
-        "symfony/framework-bundle": "^3.4.47 || ^4.4 || ^5.2"
+        "symfony/mime": "^4.4 || ^5.2",
+        "symfony/twig-bundle": "^4.4 || ^5.2",
+        "symfony/framework-bundle": "^4.4 || ^5.2"
     },
     "require-dev": {
         "matthiasnoback/symfony-dependency-injection-test": "^4.0",
         "mikey179/vfsstream": "^1.0",
         "phpunit/phpunit": "^9.0",
-        "friendsofphp/php-cs-fixer": "^2.19 || ^3.0",
+        "friendsofphp/php-cs-fixer": "^3.0",
         "rector/rector": "^0.11.53"
     },
     "autoload": {
