--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "matthiasnoback/symfony-dependency-injection-test": "^4.2",
+        "matthiasnoback/symfony-config-test": "^4.2",
         "mikey179/vfsstream": "^1.0",
         "friendsofphp/php-cs-fixer": "^3.0",
         "rector/rector": "^0.11.53"
