Drop support for Symfony 4, use CS fixer v2

--- a/.github/workflows/coding_standards.yml
+++ b/.github/workflows/coding_standards.yml
@@ -13,6 +13,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: OskarStark/php-cs-fixer-ga@master
+      - uses: OskarStark/php-cs-fixer-ga:2.19
         with:
           args: --diff --dry-run
