--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         php: ['7.2', '7.3', '7.4']
-        symfony: ['~3.4.0', '~4.4.0']
+        symfony: ['~3.4.0']
         deps: ['normal']
         include:
           - php: '7.2'
