--- a/.github/workflows/coding_standards.yml
+++ b/.github/workflows/coding_standards.yml
@@ -13,6 +13,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: OskarStark/php-cs-fixer-ga:2.19
+      - uses: OskarStark/php-cs-fixer-ga@2.19.0
         with:
           args: --diff --dry-run
